[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0509804, 0.0901961, 0.160784, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "RETROVERSE"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer Board Games"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CheckBot" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Play with AI Bot"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter IP to Join:"

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"
